<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#716D6D">

    <TextView
        android:id="@+id/GCStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/giftcardstore"
        android:textColor="#FFFFFF"
        android:textSize="21.33sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/GCStore"
        android:layout_marginStart="18.6dp"
        android:fontFamily="@font/open_regular"
        android:text="@string/giftingmadeeasy"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="10dp"
        android:textSize="13.33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GCStore" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/my_gift_cards"
        android:textColor="#F6E79F"
        android:layout_marginTop="23dp"
        android:background="@drawable/shape"
        android:paddingStart="12dp"
        android:paddingEnd="11dp"
        android:paddingTop="5dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="4dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>